Volume scatter: intersecting objects GPU rendering artifacts #43926

Closed
opened 2015-03-08 07:00:51 +01:00 by Anton Ilmyanov · 9 comments

System Information
Windows 7 64
Tested with GTX 670 and 770

Blender Version
Broken: 2.73a, 2.72b

Short description of error
Intersecting parts of objects with Volume Scatter node are rendered with artifacts when using GPU. The pattern is different for each GPU and also depends on the tile size.

CPU rendering is working fine.

GPU 1: volume_scatter_artifacts_gpu1.png GPU 2: volume_scatter_artifacts_gpu2.png CPU: volume_scatter_artifacts_cpu.png

Both GPUs are running at factory settings, no other issues with them.

Exact steps for others to reproduce the error
Open the attached .blend, render with GPU, then render with CPU to compare.
volume_scatter_artifacts.blend

**System Information** Windows 7 64 Tested with GTX 670 and 770 **Blender Version** Broken: 2.73a, 2.72b **Short description of error** Intersecting parts of objects with Volume Scatter node are rendered with artifacts when using GPU. The pattern is different for each GPU and also depends on the tile size. CPU rendering is working fine. | GPU 1: ![volume_scatter_artifacts_gpu1.png](https://archive.blender.org/developer/F147981/volume_scatter_artifacts_gpu1.png) | GPU 2: ![volume_scatter_artifacts_gpu2.png](https://archive.blender.org/developer/F147983/volume_scatter_artifacts_gpu2.png) | CPU: ![volume_scatter_artifacts_cpu.png](https://archive.blender.org/developer/F147985/volume_scatter_artifacts_cpu.png) | | -- | -- | -- | Both GPUs are running at factory settings, no other issues with them. **Exact steps for others to reproduce the error** Open the attached .blend, render with GPU, then render with CPU to compare. [volume_scatter_artifacts.blend](https://archive.blender.org/developer/F147988/volume_scatter_artifacts.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AntonIlmyanov

Added subscriber: @AntonIlmyanov

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

I don't have such artifacts here, but GPU and CPU look different. (Geforce 540M, b4fccce).

I don't have such artifacts here, but GPU and CPU look different. (Geforce 540M, b4fccce).
Sergey Sharybin was assigned by Thomas Dinges 2015-03-08 10:27:08 +01:00

This issue was referenced by ed7e593a4b

This issue was referenced by ed7e593a4b129e1367a7f5aa2d0e9036e5363bea

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ed7e593a4b.

Closed by commit ed7e593a4b.

This issue was referenced by 01ee21ffb9

This issue was referenced by 01ee21ffb930d1e75c8501da44b06d63b6d46704

This issue was referenced by blender/cycles@61abb71aa4

This issue was referenced by blender/cycles@61abb71aa48428a41a5814398396781f84134c81
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43926
No description provided.